--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="./src/css/style.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="./manifest.json" />
   <meta name="theme-color" content="#00aaff" />
 </head>
 <body>
