bismillah fix path

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
   <meta charset="UTF-8" />
   <title>Dicoding Cerita</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <link rel="stylesheet" href="./src/css/style.css" />
+  
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="./manifest.json" />
   <meta name="theme-color" content="#00aaff" />
 </head>
+
 <body>
   <!-- Skip link aksesibilitas -->
   <a href="#konten-utama" class="skip-link" id="skip-link">Lewati ke konten utama</a>
@@ -41,4 +42,5 @@
     });
   </script>
 </body>
+
 </html>
