--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Dicoding Cerita</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
+  <link rel="stylesheet" href="src/css/style.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="manifest" href="./manifest.json" />
   <meta name="theme-color" content="#00aaff" />
