final + tambah button logout

--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
   <a href="#konten-utama" class="skip-link" id="skip-link">Lewati ke konten utama</a>
 
   <header role="banner">
-    <nav>
-      <a href="#/login">Home</a>
-      <a href="#/stories">Stories</a>
-      <a href="#/add">Add Story</a>
-      <a href="#/saved">Saved Stories</a>
-    </nav>
+    <nav></nav>
     <h1>Dicoding Cerita</h1>
   </header>
 
