--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <!-- JavaScript -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="bundle.js"></script>
+  <script src="dist/bundle.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
   <script>
