--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <title>Dicoding Cerita</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+  <link rel="icon" href="/path/to/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="manifest" href="./manifest.json" />
   <meta name="theme-color" content="#00aaff" />
